--- a/index.html
+++ b/index.html
@@ -197,31 +197,31 @@ main { margin-left: var(--nav-w); flex: 1; padding: 40px 40px 80px; min-height: 
 <!-- MOBILE HEADER -->
 <div class="mobile-header">
   <div class="m-name-wrap">
-    <span class="m-name">firstname lastname</span>
-    <span class="m-role">visual designer &amp; creative</span>
+    <span class="m-name">THOMAS AUDENAERT</span>
+    <span class="m-role">Motion designer &amp; creative</span>
   </div>
 </div>
 
 <!-- SIDEBAR -->
 <nav class="sidebar">
-  <div class="nav-name">firstname lastname</div>
-  <div class="nav-role">visual designer &amp; creative</div>
+  <div class="nav-name">THOMAS AUDENAERT</div>
+  <div class="nav-role">Motion designer &amp; creative</div>
   <div class="nav-section-label">— social</div>
   <div class="nav-links">
-    <a href="https://instagram.com/yourhandle" target="_blank">
+    <a href="https://instagram.com/thomasaudenaert" target="_blank">
       <svg class="icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5">
         <rect x="2" y="2" width="20" height="20" rx="5"/><circle cx="12" cy="12" r="5"/>
         <circle cx="17.5" cy="6.5" r="1" fill="currentColor" stroke="none"/>
       </svg>instagram
     </a>
-    <a href="https://behance.net/yourhandle" target="_blank">
+    <a href="https://behance.net/thomasaudenaert2" target="_blank">
       <svg class="icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5">
         <path d="M2 7h7c2 0 3.5 1 3.5 3s-1.5 3-3.5 3H2V7z"/>
         <path d="M2 13h8c2 0 3.5 1 3.5 3s-1.5 3-3.5 3H2v-6z"/>
         <path d="M15 8h7M15 12h7M16 16c0-2 1.5-4 4-4s4 2 4 4h-8z"/>
       </svg>behance
     </a>
-    <a href="https://linkedin.com/in/yourhandle" target="_blank">
+    <a href="https://linkedin.com/in/thomas-audenaert" target="_blank">
       <svg class="icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5">
         <rect x="2" y="2" width="20" height="20" rx="3"/>
         <path d="M7 10v7M7 7v.5M12 17v-4c0-1.5 1-3 3-3s3 1.5 3 3v4M12 10v7"/>
@@ -230,29 +230,29 @@ main { margin-left: var(--nav-w); flex: 1; padding: 40px 40px 80px; min-height: 
   </div>
   <div class="nav-section-label">— contact</div>
   <div class="nav-contact">
-    <a href="mailto:hello@yourname.com">hello@yourname.com</a>
-    <a href="tel:+32000000000">+32 000 00 00 00</a>
+    <a href="mailto:hello@thomasaudenaert.be">hello@thomasaudenaert.be</a>
+    <a href="tel:+32000000000">+32 474 09 44 10</a>
   </div>
-  <div class="nav-bottom">© 2025</div>
+  <div class="nav-bottom">© 2026</div>
 </nav>
 
 <!-- MOBILE FOOTER -->
 <div class="mobile-footer">
   <div class="mf-social">
-    <a href="https://instagram.com/yourhandle" target="_blank">
+    <a href="https://instagram.com/thomasaudenaert" target="_blank">
       <svg class="icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5">
         <rect x="2" y="2" width="20" height="20" rx="5"/><circle cx="12" cy="12" r="5"/>
         <circle cx="17.5" cy="6.5" r="1" fill="currentColor" stroke="none"/>
       </svg>
     </a>
-    <a href="https://behance.net/yourhandle" target="_blank">
+    <a href="https://behance.net/thomasaudenaert2" target="_blank">
       <svg class="icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5">
         <path d="M2 7h7c2 0 3.5 1 3.5 3s-1.5 3-3.5 3H2V7z"/>
         <path d="M2 13h8c2 0 3.5 1 3.5 3s-1.5 3-3.5 3H2v-6z"/>
         <path d="M15 8h7M15 12h7M16 16c0-2 1.5-4 4-4s4 2 4 4h-8z"/>
       </svg>
     </a>
-    <a href="https://linkedin.com/in/yourhandle" target="_blank">
+    <a href="https://linkedin.com/in/thomas-audenaert" target="_blank">
       <svg class="icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5">
         <rect x="2" y="2" width="20" height="20" rx="3"/>
         <path d="M7 10v7M7 7v.5M12 17v-4c0-1.5 1-3 3-3s3 1.5 3 3v4M12 10v7"/>
