--- a/index.html
+++ b/index.html
@@ -317,16 +317,16 @@ function makePlaceholder(type) {
 // ── PROJECTS ──
 const PROJECTS = [
   {
-    title: 'urban textures', type: 'photography',
-    desc: 'A series exploring the visual grammar of city surfaces — concrete, rust, and light.',
-    ratio: '1:1', barColor: 'white',
-    media: [{src:null,isVideo:false},{src:null,isVideo:false}]
+    title: 'Where the trail breaks', type: 'motion design',
+    desc: 'Short character animation',
+    ratio: '16:9', barColor: 'white',
+    media: [{src:'images/pol-01.jpg',isVideo:false},{src:'images/pol-02.jpg',isVideo:false},{src:'images/pol-03.jpg',isVideo:false}]
   },
   {
-    title: 'brand identity / nova studio', type: 'branding',
-    desc: 'Complete brand system for an emerging architecture firm. Logo, type, and spatial guidelines.',
+    title: 'event branding', type: 'branding',
+    desc: 'Poster en branding voor de 80-jarige jubileum-editie van het eetfestijn van Scouts Sint-Paulus',
     ratio: '4:5',
-    media: [{src:null,isVideo:false}]
+    media: [{src:'images/eetfestijn.png',isVideo:false}]
   },
   {
     title: 'motion reel 2024', type: 'motion design',
