--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@ const PROJECTS = [
     title: 'Where the trail breaks', type: 'motion design',
     desc: 'Short character animation',
     ratio: '16:9', barColor: 'white',
-    media: [{src:'images/pol-01.jpg',isVideo:false},{src:'images/pol-02.jpg',isVideo:false},{src:'images/pol-03.jpg',isVideo:false}]
+    media: [{src:'images/pol-01.png',isVideo:false},{src:'images/pol-02.png',isVideo:false},{src:'images/pol-03.png',isVideo:false}]
   },
   {
     title: 'event branding', type: 'branding',
