--- a/index.html
+++ b/index.html
@@ -329,10 +329,10 @@ const PROJECTS = [
     media: [{src:'images/eetfestijn.png',isVideo:false}]
   },
   {
-    title: 'motion reel 2024', type: 'motion design',
+    title: 'motion reel 2025', type: 'motion design',
     desc: 'A selection of motion graphics and title sequences produced throughout 2024.',
     ratio: '16:9',
-    media: [{src:null,isVideo:false}]
+    media: [{src:'images/reel2025.mp4',isVideo:true}]
   },
   {
     title: 'editorial / fragment', type: 'print design',
