--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@ const PROJECTS = [
     title: 'motion reel 2025', type: 'motion design',
     desc: 'A selection of motion graphics and title sequences produced throughout 2024.',
     ratio: '16:9',
-    media: [{src:'images/reel2025.mp4',isVideo:true}]
+    media: [{src:'images/thomas-reel2025.mp4',isVideo:true}]
   },
   {
     title: 'editorial / fragment', type: 'print design',
