--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   --surface: #111;
   --border: #1e1e1e;
   --text: #e0e0e0;
-  --muted: #555;
+  --muted: #9E9E9E;
   --accent: #f0f0f0;
   --nav-w: 220px;
   --font: 'JetBrains Mono', 'Space Mono', monospace;
